# CPP-Perceptron-2019

./: CMakeLists.txt
matrix/: matrix.cpp  matrix.h
perceptron/: field.cpp  field.h  perceptron.cpp  perceptron.h  point.cpp  point.h
